crates/lang/macro/tests/ui/contract/fail/message-input-pattern.stderr
error: ink! message arguments must have an identifier
  --> $DIR/message-input-pattern.rs:15:31
   |
15 |         pub fn message(&self, (_a, _b): (i32, i32)) {}
   |                               ^^^^^^^^^^^^^^^^^^^^
